Current Display object set text depending on the selected sensor.

--- a/SensorApp/src/sensorapp/station/ConcreteDisplay/CreateSensorUI.form
+++ b/SensorApp/src/sensorapp/station/ConcreteDisplay/CreateSensorUI.form
@@ -134,7 +134,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextPane" name="SensorName">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Enter Name..."/>
+                <Property name="text" type="java.lang.String" value="Enter UNIQUE Name..."/>
               </Properties>
             </Component>
           </SubComponents>
