--- a/SensorApp/src/sensorapp/station/ConcreteDisplay/CreateSensorUI.form
+++ b/SensorApp/src/sensorapp/station/ConcreteDisplay/CreateSensorUI.form
@@ -167,6 +167,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="CancelButtonMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CancelButtonActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="SensorTypeComboBox">
